--- a/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-perguntas/app6-geopolitica-relacoes-internacionais-perguntas.html
+++ b/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-perguntas/app6-geopolitica-relacoes-internacionais-perguntas.html
@@ -5,7 +5,7 @@
   <div class="bibliografia-selector-container">
     <div class="bibliografia-selector-card">
       <label for="bibliografia-select" class="bibliografia-label">
-        <strong>📖 Selecionar Bibliografia:</strong>
+        <strong>📖 Selecionar tesre Bibliografia:</strong>
       </label>
       <select 
         id="bibliografia-select"
